styling intro, index, barista-sca and brewing-sca.html

--- a/aeropress.html
+++ b/aeropress.html
@@ -44,11 +44,12 @@
             </div>
         </nav>
 
-
     </header>
 
+    <! --- main section --->
+
     <div class="container">
-        <div class="brewing-container">
+        <div class="brewing-container main-container">
             <div class="row">
                 <div class="col">
                     <h2>The Aeropress</h2>
@@ -56,7 +57,6 @@
                     <p>It is a great method for brewing a single cup at home - quick, clean and easy. However, in our opinion, the instructions that Aeropress provide themselves are not the best way to use this brewer!</p>
                     <p>Here’s the method we use ourselves:</p>
                     <p>You will need:</p>
-
                     <ul>
                         <li>Aeropress</li>
                         <li>Scales</li>
@@ -66,7 +66,6 @@
                         <li>250 filtered water, just off the boil</li>
                         <li>Sturdy jug or mug</li>
                     </ul>
-
                     <ol>
                         <li>Place two filter papers into cap and screw on tight.</li>
                         <li>Rinse out with hot water and place on top of your jug.</li>
@@ -77,22 +76,71 @@
                         <li>Once the timer reaches 1:30, start to push down on the plunger.</li>
                         <li>Aim to finish plunging at 2:00.</li>
                     </ol>
-
                     <h4>Enjoy!</h4>
-
                 </div>
             </div>
         </div>
     </div>
     <hr class="section-divider">
+
+    <! --- sub-section --->
+
     <div class="container">
         <div class="row">
             <div class="col">
-                <p class="brewing-download">Want to download a printable pdf? Click <a href="./assets/images/Aeropress-Brew-Guide.pdf" target="_blank">here</a></p>
+                <p class="brewing-download">Want to download it as pdf? Click <a href="./assets/images/Aeropress-Brew-Guide.pdf" target="_blank">here</a></p>
             </div>
         </div>
     </div>
 
+    <! --- footer --->
+
+    <footer>
+        <div class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6 media d-inline-flex justify-content-center">
+                        <ul class="list-inline">
+                            <li class="list-inline-item">
+                                <a href="https://www.facebook.com/" target="_blank">
+<i class="fab fa-facebook-f" aria-hidden="true"></i>
+<span class="sr-only">Facebook</span>
+</a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://twitter.com/" target="_blank">
+<i class="fab fa-twitter" aria-hidden="true"></i>
+<span class="sr-only">Twitter</span></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://www.linkedin.com" target="_blank">
+<i class="fab fa-linkedin-in" aria-hidden="true"></i>
+<span class="sr-only">LinkedIn</span>
+</a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://www.pinterest.com/" target="_blank">
+<i class="fab fa-pinterest" aria-hidden="true"></i>
+<span class="sr-only">Pinterest</span>
+</a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://www.instagram.com/" target="_blank">
+<i class="fab fa-instagram" aria-hidden="true"></i>
+<span class="sr-only">Instagram</span>
+</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-6 my-info d-inline-flex justify-content-center">
+                        <p>Designed by roxheff <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square aria-hidden="true""></i></p></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
