--- a/brewing.html
+++ b/brewing.html
@@ -66,10 +66,10 @@
     <div class="col text-center">
       <h3>Great coffee is useless without great brewing.</h3>
       <p>We do half the work, now it’s your turn...</p>
-      <hr>
+      <hr class="section-divider">
       <p>Learn how to brew that perfect cup at home. Don’t be afraid to experiment either!</p>
       <p>Click on each method below to learn more.</p>
-      <p><em>You are welcome</em></p>
+      <p><strong>You are welcome!</strong></p>
     </div>
   </div>
 </div>
@@ -119,7 +119,7 @@
     </div>
   </div>
   
-  <hr>
+  <hr class="section-divider">
   
   <div class="container">
     <div class="row">
