--- a/cafetiere.html
+++ b/cafetiere.html
@@ -44,20 +44,20 @@
             </div>
         </nav>
 
-
     </header>
 
+    <! --- main section --->
+
     <div class="container">
-        <div class="brewing-container">
+        <div class="brewing-container main-container">
             <div class="row">
                 <div class="col">
                     <h2>The French Press (Cafetiere)</h2>
-                    <hr>
+                    <hr class="section-divider">
                     <p>It is probably the first brewing method most of us encounter. It’s simple to use and can make delicious coffee - however, because it only uses a metal mesh filter, fine particles can escape and leave a bit of sludge in the bottom of
                         the cup.</p>
                     <p>This method helps to minimise this so you can enjoy the full flavours and body of this brew method.</p>
                     <p>You will need:</p>
-
                     <ul>
                         <li>French Press</li>
                         <li>Scales</li>
@@ -66,7 +66,6 @@
                         <li>68g coffee per litre of water</li>
                         <li>Two spoons (dessert or soup spoons are ideal)</li>
                     </ul>
-
                     <ol>
                         <li>Grind 68g for every litre of water you’ll be using and put into jug.</li>
                         <li>Start a timer and pour in filtered water, just off the boil, pouring in a circle to make sure all grounds are wetted - but do not stir.</li>
@@ -76,27 +75,76 @@
                         <li>Replace the lid and slowly push down the plunger.</li>
                         <li>Replace the lid and slowly push down the plunger.</li>
                     </ol>
-
                     <p>After you’ve enjoyed your coffee, clean the press thoroughly - completely disassemble the mesh each time and wash in hot soapy water to ensure no coffee remains stuck in the mesh.</p>
-
                     <h4>Enjoy!</h4>
-                    
-</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr class="section-divider">
+
+    <! --- sub-section --->
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <p class="brewing-download">Want to download it as pdf? Click <a href="./assets/images/French-Press-Brew-Guide.pdf" target="_blank">here</a></p>
             </div>
         </div>
     </div>
 
-                    <div class="container">
-                        <div class="row">
-                            <div class="col">
-                                <p class="brewing-download">Want to download a printable pdf? Click <a href="./assets/images/French-Press-Brew-Guide.pdf" target="_blank">here</a></p>
-                            </div>
-                        </div>
-                    </div>
+    <! --- footer --->
 
-                    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-                    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-                    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <footer>
+        <div class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6 media d-inline-flex justify-content-center">
+                        <ul class="list-inline">
+                            <li class="list-inline-item">
+                                <a href="https://www.facebook.com/" target="_blank">
+<i class="fab fa-facebook-f" aria-hidden="true"></i>
+<span class="sr-only">Facebook</span>
+</a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://twitter.com/" target="_blank">
+<i class="fab fa-twitter" aria-hidden="true"></i>
+<span class="sr-only">Twitter</span></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://www.linkedin.com" target="_blank">
+<i class="fab fa-linkedin-in" aria-hidden="true"></i>
+<span class="sr-only">LinkedIn</span>
+</a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://www.pinterest.com/" target="_blank">
+<i class="fab fa-pinterest" aria-hidden="true"></i>
+<span class="sr-only">Pinterest</span>
+</a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://www.instagram.com/" target="_blank">
+<i class="fab fa-instagram" aria-hidden="true"></i>
+<span class="sr-only">Instagram</span>
+</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-6 my-info d-inline-flex justify-content-center">
+                        <p>Designed by roxheff <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square aria-hidden="true""></i></p></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+        </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
