--- a/chemex.html
+++ b/chemex.html
@@ -44,22 +44,21 @@
       </div>
     </nav>
 
-
   </header>
 
+  <! --- main section --->
 
   <div class="container">
-    <div class="brewing-container">
+    <div class="brewing-container main-container">
       <div class="row">
         <div class="col">
           <h2>V60 | Chemex | Kalita</h2>
-          <hr>
+          <hr class="section-divider">
           <p>There are subtle differences between the different brands of pour-over brewer, but they all follow the same principles and all produce delicate, refined brews.</p>
           <p>We suggest using a Buono pouring kettle but anything that allows you to pour a thin, steady stream of water will work. If you’re using a separate vessel for pouring then be sure to preheat it with boiling water, then add boiling water just before
             pouring, to minimise heat loss.</p>
           <p>The amounts suggested here are perfect for a V60 02 size brewer - adjust the amounts accordingly for larger or smaller brewers.</p>
           <p>You will need:</p>
-
           <ul>
             <li>Filter cone</li>
             <li>Filter paper to fit</li>
@@ -70,7 +69,6 @@
             <li>60g of coffee per litre of water</li>
             <li>Jug or mug</li>
           </ul>
-
           <ol>
             <li>Put filter into cone and rinse thoroughly with hot water.</li>
             <li>Add 30g ground coffee and shake lightly to settle. </li>
@@ -79,22 +77,71 @@
             <li>Wait until the coffee stops producing gas bubbles - about 30 seconds should do it. </li>
             <li>Gradually pour on the remaining water until you reach 500g. Pour in gentle spirals onto the surface of the coffee, so that the water reaches all parts of the coffee evenly.</li>
             <li>Aim to have all the water in the brewer by 2:00.</li>
-
             <h4>Enjoy!</h4>
-
         </div>
       </div>
     </div>
   </div>
+  <hr class="section-divider">
+
+  <! --- sub-section --->
 
   <div class="container">
     <div class="row">
       <div class="col">
-        <p class="brewing-download">Want to download a printable pdf? Click <a href="./assets/images/V60-Chemex-Brew-Guide.pdf" target="_blank">here</a></p>
+        <p class="brewing-download">Want to download it as pdf? Click <a href="./assets/images/V60-Chemex-Brew-Guide.pdf" target="_blank">here</a></p>
       </div>
     </div>
   </div>
 
+  <! --- footer --->
+
+  <footer>
+    <div class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-6 media d-inline-flex justify-content-center">
+            <ul class="list-inline">
+              <li class="list-inline-item">
+                <a href="https://www.facebook.com/" target="_blank">
+<i class="fab fa-facebook-f" aria-hidden="true"></i>
+<span class="sr-only">Facebook</span>
+</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://twitter.com/" target="_blank">
+<i class="fab fa-twitter" aria-hidden="true"></i>
+<span class="sr-only">Twitter</span></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com" target="_blank">
+<i class="fab fa-linkedin-in" aria-hidden="true"></i>
+<span class="sr-only">LinkedIn</span>
+</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.pinterest.com/" target="_blank">
+<i class="fab fa-pinterest" aria-hidden="true"></i>
+<span class="sr-only">Pinterest</span>
+</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.instagram.com/" target="_blank">
+<i class="fab fa-instagram" aria-hidden="true"></i>
+<span class="sr-only">Instagram</span>
+</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-6 my-info d-inline-flex justify-content-center">
+            <p>Designed by roxheff <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square aria-hidden="true""></i></p></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+    </div>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
