--- a/intro.html
+++ b/intro.html
@@ -51,38 +51,41 @@
 
     <div class="container main-container">
         <div class="container main-landing">
-            <div class="row">
+            <div class="row no-gutters">
                 <div class="col">
                     <img src="./assets/images/our-courses.png" alt="roasted coffee beans image" width=100% height=auto>
-                    <p class="ph-landing">Intro to Coffee</p>
+                    <p class="ph-landing uppercase">our courses</p>
                 </div>
             </div>
-        </div><br>
+        </div>
     </div>
+    <br>
 
     <! --- media object --->
 
     <div class="container">
-        <div class="row">
-            <div class="col">
-
+        <div class="row no-gutters">
+            <div class="col-12">
                 <div class="media">
-                    <img src="./assets/images/barista-sca.png" alt="latte art image" class="align-self-center mx-3 mt-2" style="width:200px">
+                    <img src="./assets/images/intro-coffee-sca.png" alt="green coffee beans image" class="align-self-center mx-3 mt-2" style="width:33%">
                     <div class="media-body">
-                        <h4>Introduction to coffee</h4>
-                        <p>Introduction to coffee is a module ideal for anyone who is new to the coffee industry or just has an interest in this wonderful drink.</p>
+                        <h2>Introduction to coffee</h2>
+                        <p>This module ideal for anyone who is new to the coffee industry or just has an interest in this wonderful drink.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
+
+    <! --- overview-section --->
+
     <div class="container">
-        <div class="row">
-            <div class="col">
-                <div class="intro-content">
-                    <h5>Overview</h5>
-                    <hr>
+        <div class="row no-gutters">
+            <div class="col-12">
+                <div class="sca-content">
+                    <h3>Overview</h3>
+                    <hr class="section-divider">
                     <p>This course charts coffee’s journey from its origins in Ethiopia to the major commodity it is today, enjoyed by millions of people around the world.</p>
                     <p>From farming the cherries through drying, roasting, brewing and finally drinking, this module looks at the processes coffee goes through.</p>
                     <p>This course also includes “coffee cupping which allows you to taste the various flavours coffee has to offer.</p>
@@ -94,32 +97,79 @@
         </div>
     </div>
 
+    <! --- form --->
+
     <div class="container">
         <div class="row no-gutters">
-            <div class="col form-heading">
-                <h5 class="text-center">Sounds interesting?</h5>
-                <div class="center-form">
-                    <form>
-                        <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
-                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
-                        <textarea rows="5" name="message" id="message" class="form-control" placeholder="Your message goes here" required></textarea>
-                        <div class="form-row text-center">
-                            <div class="col">
-                                <button type="submit" class="btn btn-secondary landing-btn">Send message</button>
-                            </div>
+            <div class="col-6 offset-3">
+                <h3 class="text-center form-heading">Sounds interesting?</h3>
+                <form>
+                    <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
+                    <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
+                    <textarea rows="5" name="message" id="message" class="form-control" placeholder="Your message goes here" required></textarea>
+                    <div class="form-row text-center">
+                        <div class="col">
+                            <button type="submit" class="btn my-button my-border">Send message</button>
                         </div>
-                    </form>
+                </form>
                 </div>
-
             </div>
         </div>
     </div>
 
+
     <! --- footer --->
 
     <footer>
+        <div class="footer">
 
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-6 media d-inline-flex justify-content-center">
+                        <ul class="list-inline">
+                            <li class="list-inline-item">
+                                <a href="https://www.facebook.com/" target="_blank">
+<i class="fab fa-facebook-f" aria-hidden="true"></i>
+<span class="sr-only">Facebook</span>
+</a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://twitter.com/" target="_blank">
+<i class="fab fa-twitter" aria-hidden="true"></i>
+<span class="sr-only">Twitter</span></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://www.linkedin.com" target="_blank">
+<i class="fab fa-linkedin-in" aria-hidden="true"></i>
+<span class="sr-only">LinkedIn</span>
+</a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://www.pinterest.com/" target="_blank">
+<i class="fab fa-pinterest" aria-hidden="true"></i>
+<span class="sr-only">Pinterest</span>
+</a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://www.instagram.com/" target="_blank">
+<i class="fab fa-instagram" aria-hidden="true"></i>
+<span class="sr-only">Instagram</span>
+</a>
+                            </li>
+
+                        </ul>
+                    </div>
+                    <div class="col-6 my-info d-inline-flex justify-content-center">
+                        <p>Designed by roxheff <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square aria-hidden="true""></i></p></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+        </div>
     </footer>
+
 
 
 
