--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
     <! --- jumbotron hero image --->
 
     <div class="container">
-      <div class="row">
-        <div class="col">
-          <div class="jumbotron jumbotron-container">
+      <div class="row no-gutters">
+        <div class="col-12">
+          <div class="jumbotron jumbotron-container main-container">
             <h1 class="display-4">Welcome</h1>
             <p class="lead">We bring you sustainable, organic, fair trade coffee from the best farmers in the world</p>
             <hr class="section-divider">
-            <p>We now supplement barista courses with SCA Coffee Skills modules<span>&nbsp</span><a href="#" class="badge badge-light">New</a></p>
+            <p>We now supplement barista courses with SCA Coffee Skills modules<span>&nbsp</span><a href="intro.html" class="badge badge-light">New</a></p>
           </div>
         </div>
       </div>
@@ -68,9 +68,9 @@
     <! --- about us --->
 
     <div class="container">
-      <div class="row">
-        <div class="col">
-          <div class="quote-landing">
+      <div class="row no-gutters">
+        <div class="col-12">
+          <div class="quote-landing my-border">
             <p class="quote"> <i class="fas fa-quote-left fa-xs" aria-hidden="true"></i>Life is short, enjoy your coffee<i class="fas fa-quote-right fa-xs" aria-hidden="true"></i></p>
           </div>
         </div>
@@ -78,8 +78,8 @@
     </div>
 
     <div class="container">
-      <div class="row">
-        <div class="col">
+      <div class="row no-gutters">
+        <div class="col-12">
           <div class="about">
             <p>We are a wholesale coffee roastery renowned for sourcing speciality coffee from all over the world.</p>
             <p>We currently supply fresh roasted coffee to order to 200+ venues nationwide.</p>
@@ -87,34 +87,35 @@
         </div>
       </div>
     </div>
+</div>
 
     <! --- beans --->
 
-    <div class="container headers-landing">
-      <div class="row">
-        <div class="col">
-          <img src="./assets/images/our-beans.png" alt="roasted coffee beans image" width=100% height=auto>
-          <p class="ph-landing">Our Coffees</p>
+    <div class="container headers-landing our-coffees-landing">
+      <div class="row no-gutters">
+        <div class="col-12">
+          <img src="./assets/images/our-beans.png" alt="roasted coffee beans image" class="our-coffees-img">
+          <p class="ph-landing uppercase">our coffees</p>
         </div>
       </div>
     </div>
 
     <! --- cards for beans section --->
 
-    <div class="container cards-beans">
-      <div class="card-deck">
-        <div class="row">
+    <div class="container cards-beans px-0">
+      <div class="card-deck my-4">
+        <div class="row no-gutters">
 
           <div class="col-12 col-md-6">
 
-            <div class="card">
-              <div class="card-header">
-                <h3>Single Origin</h3>
+            <div class="card mx-0 mr-2">
+              <div class="card-header my-border">
+                <h2>Single Origin</h2>
               </div>
-              <img class="card-img-top" src="./assets/images/single-origin-card1.png" alt="Kettle pouring into chemex image">
-              <div class="card-body">
+              <img class="card-img-top" src="./assets/images/single-origin-card1.png" alt="Kettle pouring into chemex image" width=256 height=146>
+              <div class="card-body my-border">
                 <p class="card-text">This is where the fun is. These are seasonal coffees that are constantly changing. Very often we buy entire micro lots, giving us world exclusivity on that coffee – when we do this you know that the coffee is truly exceptional.</p>
-                <a href="coffees-single.html" class="btn btn-light">Read more</a>
+                <a href="coffees-single.html" class="btn btn-info my-button my-border">Read more</a>
               </div>
             </div>
           </div>
@@ -123,21 +124,20 @@
 
           <div class="col-12 col-md-6">
 
-            <div class="card">
-              <div class="card-header">
-                <h3>Blends</h3>
+            <div class="card mx-0 ml-2">
+              <div class="card-header my-border">
+                <h2>Blends</h2>
               </div>
-              <img class="card-img-top" src="./assets/images/blends-card2.png" alt="Espresso machine and cups image">
-              <div class="card-body">
+              <img class="card-img-top" src="./assets/images/blends-card2.png" alt="Espresso machine and cups image" width=256 height=146>
+              <div class="card-body my-border">
                 <p class="card-text">With every new crop, beans change subtly. With every new coffee we import, a new blend awaits. We know that creating the "perfect" blend is a futile persuit but we love trying and we know you'll enjoy what we create.</p>
-                <a href="coffees-blends.html" class="btn btn-light">Read more</a>
+                <a href="coffees-blends.html" class="btn btn-info my-button my-border">Read more</a>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 
 
   <! --- sca courses --->
@@ -147,7 +147,7 @@
     <div class="row">
       <div class="col">
         <img src="./assets/images/our-courses.png" alt="roasted coffee beans image" width=100% height=auto>
-        <p class="ph-landing">Our Courses</p>
+        <p class="ph-landing uppercase">our courses</p>
       </div>
     </div>
   </div>
@@ -160,7 +160,7 @@
         <div class="container">
           <div class="row no-gutters">
             <div class="col-12 d-inline-flex justify-content-center">
-              <img src="./assets/images/sca-logo.png" alt="sca logo image" width=200 height=200></img>
+              <img src="./assets/images/sca-logo.png" alt="sca logo image" width=300 height=300></img>
             </div>
           </div>
         </div>
@@ -173,7 +173,7 @@
         <p>SCA Barista Courses and Coffee Skills Program allows the coffee professionals to complete coffee/barista courses in six subject modules and three levels of certifications, amassing course credits each time a certification is successfully passed
           that count towards the 100 points needed to gain SCA internationally recognized Coffee Diploma.</p>
         <p>It’s your choice on the SCA coffee/barista modules you take to get you to 100 points. SCA Certification is based on both technical knowledge and practical examination.</p>
-        <button type="button" class="btn btn-outline-secondary">Browse courses</button>
+        <a href="intro.html" class="btn btn-info my-button my-border">Start here</a>
       </div>
     </div>
   </div>
@@ -293,37 +293,33 @@
       </div>
     </div>
   </div>
+  <hr class="section-divider">
 
   <! --- quotes --->
 
 
 
 
-  <! --- enquiries form --->
+ <! --- form --->
 
-  <section class="container">
-    <div class="row contact-landing">
-      <div class="col">
-        <h3 class="contact-heading text-center">
-          Espresso yourself!
-        </h3>
-        <h5 class="uppercase text-center">
-          We'd love to hear from you
-        </h5>
-        <div class="center-form">
-          <form>
-            <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
-            <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
-            <textarea rows="5" name="message" id="message" class="form-control" placeholder="Your message goes here" required></textarea>
-            <div class="form-row text-center">
-              <div class="col">
-                <button type="submit" class="btn btn-secondary landing-btn">Send message</button>
-              </div>
+    <div class="container">
+        <div class="row no-gutters">
+            <div class="col-6 offset-3">
+                <h3 class="text-center form-heading">Espresso yourself</h3>
+                <form>
+                    <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
+                    <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
+                    <textarea rows="5" name="message" id="message" class="form-control" placeholder="Your message goes here" required></textarea>
+                    <div class="form-row text-center">
+                        <div class="col">
+                            <button type="submit" class="btn my-button my-border">Send message</button>
+                        </div>
+                </form>
+                </div>
             </div>
-          </form>
         </div>
-      </div>
     </div>
+
 
     <! --- footer --->
 
